# BasicCMakeTemplate

./: .gitignore  CMakeLists.txt  README.md
Src/: Main.cpp
Tests/: CMakeLists.txt
